# iridium-stomp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODESPACE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WIP_SUBSCRIPTION.md  activemq-stack.yaml  artemis-stack.yaml  brad.test  devcontainer.json  docker-compose.yml  rabbitmq-stack.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/issues/: 01-codec-content-length.md  01-stabilize-api-and-docs.md  02-publish-and-release-prep.md  03-ci-stability-and-integration-tests.md  04-subscription-api.md  05-ack-and-transactions.md  (+3 more)
.github/scripts/: README.md  (+1 more)
docs/: README.md  cli.md  durable_subscriptions.md  heartbeats.md  stomp_spec.md  subscriber-guide.md  subscriptions.md
examples/: listen.rs  multi_subscribe.rs  quickstart.rs  send.rs  send_advanced.rs  subscribe.rs  subscribe_with_headers.rs  transactions.rs
iridium-stomp/: Cargo.toml  README.md
iridium-stomp/.github/workflows/: docs-pages.yml
iridium-stomp/docs/: subscriptions.md
iridium-stomp/examples/: quickstart.rs  subscribe.rs  subscribe_with_headers.rs
iridium-stomp/src/: codec.rs  connection.rs  frame.rs  lib.rs  subscription.rs
iridium-stomp/tests/: codec_content_length.rs  codec_edge_cases.rs  codec_fuzz.rs  codec_stress.rs  minimized_regression.rs  more_tests.rs  partial_feed.rs  reducer_minimize.rs  regression_replay.rs  stomp_smoke.rs
scripts/: test-with-rabbit.sh
src/: codec.rs  connection.rs  frame.rs  lib.rs  parser.rs  subscription.rs
tests/: codec_content_length.rs  codec_fuzz.rs  codec_heartbeat.rs  connect_error_tests.rs  connect_options_tests.rs  connect_retry_tests.rs  connection_unit.rs  error_frame_tests.rs  frame_unit.rs  header_escaping.rs  heartbeat_config_tests.rs  heartbeat_unit.rs  parser_unit.rs  partial_feed.rs  receipt_tests.rs  stomp_smoke.rs  subscribe_api_integration.rs  subscription_stream.rs  transaction_frames.rs
(+10 files in other folders)
