[package]
name = "iridium-stomp"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime and utilities
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "sync"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "1"
tracing = "0.1"

