[package]
name = "iridium-stomp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Async STOMP 1.2 client for Rust"
readme = "README.md"
repository = "https://github.com/bsiegfreid/iridium-stomp"
homepage = "https://github.com/bsiegfreid/iridium-stomp"
documentation = "https://docs.rs/iridium-stomp"
keywords = ["stomp"]

[dependencies]

# Async runtime and utilities
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "sync", "macros"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
